--- a/src/components/Nav/siteNav/siteNav.css
+++ b/src/components/Nav/siteNav/siteNav.css
@@ -1,3 +1,11 @@
 .nav-container{
     background-color: blue;
 }
+.active{
+    @apply border-l-4 rounded-r-lg border-green-600 
+
+}
+.navItem{
+    @apply block  w-full pl-6 py-4 ;
+
+}
